# Touhou6

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
crates/engine/: Cargo.toml
crates/engine/src/: audio.rs  lib.rs
crates/formats/: Cargo.toml
crates/formats/examples/: anmdump.rs  extract.rs  stddump.rs
crates/formats/src/: anm0.rs  bitstream.rs  lib.rs  lzss.rs  msg.rs  pbg3.rs  std.rs
crates/game/: Cargo.toml
crates/game/examples/: bg_dump.rs  bg_quad_dump.rs  bg_quad_ids.rs  oracle_dump.rs
crates/game/src/: anm_vm.rs  background.rs  ecl_vm.rs  hud.rs  lib.rs  main.rs  stage.rs  title.rs  web.rs
oracle/: .gitignore
oracle/anm/: TextHelper.hpp  build.sh  compare.sh  d3d8.h  oracle_anm_main.cpp  prelude.hpp  texstubs.cpp  trim.awk
oracle/bg/: build.sh  oracle_bg_main.cpp
oracle/refcap/: README.md  d3d8proxy.c  th06cap.example.txt
oracle/vm/: oracle_main.cpp
oracle/vm/engine_stub/: AnmManager.hpp  Effect.hpp  EffectManager.hpp  GameErrorContext.hpp  GameManager.hpp
web/: README.md  index.html
